remove CMS args